fix: layout issues on login page

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -26,6 +26,12 @@ body {
     grid-template-columns: 1fr 3fr;
     grid-template-areas:
       'navigation navigation'
+      'main main';
+  }
+
+  body.dashboard {
+    grid-template-areas:
+      'navigation navigation'
       'sidebar main';
   }
 
